--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -14,6 +14,9 @@ body {
   right: 5px;
 }
 /* CARDS HOLDER*/
+.container {
+  /* DASHBOARD*/
+}
 .container .card {
   height: 250px;
   width: 200px;
@@ -53,6 +56,13 @@ body {
 .container .set-unset-button button {
   width: 100px;
 }
+.container .player-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
+.container .player-container .card {
+  margin: 10px auto;
+}
 /* NOTIF HOLDER */
 .notif .notif-holder {
   position: absolute;
@@ -64,12 +74,4 @@ body {
   color: #fff;
   font-size: 18px;
   border-radius: 5px;
-}
-/* DASHBOARD*/
-.container .player-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-}
-.container .player-container .card {
-  margin: 10px auto;
 }
