--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,9 +4,10 @@
 <head>
   <title>{{title}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" rel="stylesheet" href="/stylesheets/materialize.min.css" media="screen,projection" />
-  <link rel='stylesheet' href='/stylesheets/index.css' />
+  <link rel='stylesheet' href='/stylesheets/styles.css' />
 </head>
 
 <body>
