Add function to set players card

--- a/views/scrum-cards.hbs
+++ b/views/scrum-cards.hbs
@@ -12,7 +12,7 @@
     {{/each}}
   </div>
   <div class="set-unset-button center-align">
-    <button class="waves-effect waves-light btn green">Set</button>
-    <button class="waves-effect waves-light btn red">Unset</button>
+    <button class="waves-effect waves-light btn green set-button">Set</button>
+    <button class="waves-effect waves-light btn red unset-button">Unset</button>
   </div>
 </div>
