Add unset function for scoring

--- a/views/scrum-cards.hbs
+++ b/views/scrum-cards.hbs
@@ -13,6 +13,6 @@
   </div>
   <div class="set-unset-button center-align">
     <button class="waves-effect waves-light btn green set-button">Set</button>
-    <button class="waves-effect waves-light btn red unset-button">Unset</button>
+    <button class="waves-effect waves-light btn red unset-button" disabled>Unset</button>
   </div>
 </div>
