--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -63,6 +63,82 @@ body {
 .container .player-container .card {
   margin: 10px auto;
 }
+.flip-card {
+  background-color: transparent;
+  height: 250px;
+  width: 200px;
+  border-radius: 5px;
+  overflow: hidden;
+  perspective: 1000px;
+}
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border: 2px solid black;
+}
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border: 2px solid black;
+  box-sizing: border-box;
+}
+.flip-card-front {
+  background: black url('../images/cards.jpg');
+  color: black;
+}
+.flip-card-back {
+  color: white;
+  transform: rotateY(180deg);
+}
+.flip-card-back .upper-left {
+  top: 0;
+}
+.flip-card-back .lower-right {
+  bottom: 0;
+  right: 0;
+}
+.flip-card-back .upper-left,
+.flip-card-back .lower-right {
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 25px;
+  line-height: 46px;
+  font-weight: 600;
+  background-color: #0f2f86;
+  color: #fff;
+}
+.flip-card-back .inner-border {
+  height: 242px;
+  width: 192px;
+  position: relative;
+  border: 20px solid #0f2f86;
+}
+.flip-card-back .center-wrapper {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 25%;
+  text-align: center;
+}
+.flip-card-back .center-wrapper h1 {
+  width: 95%;
+  text-align: center;
+}
 /* NOTIF HOLDER */
 .notif .notif-holder {
   position: absolute;
