--- a/public/stylesheets/styles.less
+++ b/public/stylesheets/styles.less
@@ -69,6 +69,86 @@ body {
   }
 }
 
+.flip-card {
+  background-color: transparent;
+  height: 250px;
+  width: 200px;
+  border-radius: 5px;
+  overflow: hidden;
+  perspective: 1000px;
+  &-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border: 2px solid black;
+  }
+  &:hover {
+    .flip-card-inner {
+      transform: rotateY(180deg);
+    }
+  }
+  &-front, &-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border: 2px solid black;
+    box-sizing: border-box;
+  }
+  &-front {
+    background: black url('../images/cards.jpg');
+    color: black;
+  }
+  &-back {
+    color: white;
+    transform: rotateY(180deg);
+    .upper-left {
+      top: 0;
+    }
+    .lower-right {
+      bottom: 0;
+      right:0;
+    }
+    .upper-left, .lower-right {
+      position: absolute;
+      height: 50px;
+      width: 50px;
+      border-radius: 5px;
+      text-align: center;
+      font-size: 25px;
+      line-height: 46px;
+      font-weight: 600;
+      background-color: @card-blue;
+      color: #fff;
+    }
+
+    .inner-border {
+      height: 242px;
+      width: 192px;
+      position: relative;
+      border: 20px solid @card-blue;
+    }
+
+    .center-wrapper {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: 20%;
+      text-align: center;
+      h1 {
+        width: 95%;
+        text-align: center;
+        color: #000;
+      }
+    }
+  }
+}
+
 /* NOTIF HOLDER */
 .notif {
   .notif-holder {
