--- a/public/stylesheets/styles.less
+++ b/public/stylesheets/styles.less
@@ -63,7 +63,7 @@ body {
   .player-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    .card {
+    .playerdata {
       margin: 10px auto;
     }
   }
