--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -81,7 +81,7 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border: 2px solid black;
 }
-.flip-card:hover .flip-card-inner {
+.flip-card.flipped .flip-card-inner {
   transform: rotateY(180deg);
 }
 .flip-card-front,
