--- a/public/stylesheets/styles.less
+++ b/public/stylesheets/styles.less
@@ -86,7 +86,7 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     border: 2px solid black;
   }
-  &:hover {
+  &.flipped {
     .flip-card-inner {
       transform: rotateY(180deg);
     }
