--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,8 +1,10 @@
 <div class="notif">
 </div>
 <div class="container">
-  <button class="waves-effect waves-light btn green reveal-button">Reveal</button>
-  <button class="waves-effect waves-light btn red hide-button" disabled>Hide</button>
+  <div class="center-align">
+    <button class="waves-effect waves-light btn green reveal-button">Reveal</button>
+    <button class="waves-effect waves-light btn red hide-button" disabled>Hide</button>
+  </div>
   <div class="player-container">
 
   </div>
