Add disconnect button to scrum poker card

--- a/views/scrum-cards.hbs
+++ b/views/scrum-cards.hbs
@@ -1,4 +1,7 @@
 <div class="container">
+  <div class="right">
+    <button class="waves-effect waves-light btn disconnect-button">Disconnect</button>
+  </div>
   <div class="carousel">
     {{#each cards}}
     <div class="card carousel-item">
