--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -2,7 +2,7 @@
 </div>
 <div class="container">
   <div class="center-align">
-    <button class="waves-effect waves-light btn green reveal-button">Reveal</button>
+    <button class="waves-effect waves-light btn green reveal-button" disabled>Reveal</button>
     <button class="waves-effect waves-light btn red hide-button" disabled>Hide</button>
   </div>
   <div class="player-container">
