Change card color to white in dashboard

--- a/public/stylesheets/styles.less
+++ b/public/stylesheets/styles.less
@@ -70,7 +70,7 @@ body {
 }
 
 .flip-card {
-  background-color: transparent;
+  background-color: #fff;
   height: 250px;
   width: 200px;
   border-radius: 5px;
