Change card color to white in dashboard

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -64,7 +64,7 @@ body {
   margin: 10px auto;
 }
 .flip-card {
-  background-color: transparent;
+  background-color: #fff;
   height: 250px;
   width: 200px;
   border-radius: 5px;
